trunk/Archive2/c8/ba639948083c98/output
main.cpp:1:19: error: unknown type name 'size_t'
template<class T, size_t max>
                  ^
main.cpp:21:5: error: use of undeclared identifier 'std'
    std::aligned_storage<sizeof(T), alignof(T)> buffer;
    ^
main.cpp:21:25: error: expected member name or ';' after declaration specifiers
    std::aligned_storage<sizeof(T), alignof(T)> buffer;
    ~~~~~~~~~~~~~~~~~~~~^
main.cpp:10:45: error: use of undeclared identifier 'buffer'
    T* data() {return reinterpret_cast<T*>(&buffer);}
                                            ^
main.cpp:11:63: error: use of undeclared identifier 'buffer'
    const T* data() const {return reinterpret_cast<const T*>(&buffer);}
                                                              ^
main.cpp:23:19: error: unknown type name 'size_t'
template<class T, size_t max>
                  ^
main.cpp:28:16: error: use of undeclared identifier 'std'
    localarray(std::initializer_list<T> list) : localarray<T,0>(max) {assign(list);}   
               ^
main.cpp:28:37: error: expected ')'
    localarray(std::initializer_list<T> list) : localarray<T,0>(max) {assign(list);}   
                                    ^
main.cpp:28:15: note: to match this '('
    localarray(std::initializer_list<T> list) : localarray<T,0>(max) {assign(list);}   
              ^
main.cpp:28:78: error: use of undeclared identifier 'list'
    localarray(std::initializer_list<T> list) : localarray<T,0>(max) {assign(list);}   
                                                                             ^
main.cpp:29:65: error: use of undeclared identifier 'assign'
    explicit localarray(unsigned count) : localarray<T,0>(max) {assign(count);}
                                                                ^
10 errors generated.
